--- a/M07_funciones/Prep_Course_Homework_07-Resuelto.ipynb
+++ b/M07_funciones/Prep_Course_Homework_07-Resuelto.ipynb
@@ -357,6 +357,97 @@
     "print(factorial(1.23))\n",
     "print(factorial('6'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcular_area_rectangulo(base, altura):\n",
+    "    area = base * altura\n",
+    "    return area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calcular_area_rectangulo(4,5) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saludar(nombre, saludo=\"Hola\"):\n",
+    "    print(saludo + \", \"  + nombre)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HolaCholito\n"
+     ]
+    }
+   ],
+   "source": [
+    "saludar('Cholito')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def saludar(nombre, saludo=\"Hola\"):\n",
+    "    print(saludo + \", \" + nombre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, Carlos\n"
+     ]
+    }
+   ],
+   "source": [
+    "saludar('Carlos')"
+   ]
   }
  ],
  "metadata": {
@@ -378,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
