--- a/M04_flujosdecontrol/Prep_Course_Homework_04-Resuelto.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04-Resuelto.ipynb
@@ -133,9 +133,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El numero 1 es impar\n",
+      "El numero 2 es par\n",
+      "El numero 3 es impar\n",
+      "El numero 4 es par\n",
+      "El numero 5 es impar\n",
+      "El numero 6 es par\n",
+      "El numero 7 es impar\n",
+      "El numero 8 es par\n",
+      "El numero 9 es impar\n",
+      "El numero 10 es par\n",
+      "El numero 11 es impar\n",
+      "El numero 12 es par\n",
+      "El numero 13 es impar\n",
+      "El numero 14 es par\n",
+      "El numero 15 es impar\n",
+      "El numero 16 es par\n",
+      "El numero 17 es impar\n",
+      "El numero 18 es par\n",
+      "El numero 19 es impar\n",
+      "El numero 20 es par\n"
+     ]
+    }
+   ],
    "source": [
     "# resuelto con while\n",
     "\n",
@@ -189,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +1023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
