--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número es mayor a diez\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=15\n",
+    "if x>10:\n",
+    "    print(\"El número es mayor a diez\")\n",
+    "elif x<10:\n",
+    "    print(\"El número es menor a diez\")\n",
+    "else:\n",
+    "    print(\"El numero es igual a diez\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el valor de x es igual a 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "if x>0:\n",
+    "    print('el valor de x es mayor a 0')\n",
+    "elif x<0:\n",
+    "    print('el valor de x es menor a 0')\n",
+    "else:\n",
+    "    print('el valor de x es igual a 0')"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +72,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son del mismo type\n"
+     ]
+    }
+   ],
+   "source": [
+    "var1= 'Hello'\n",
+    "var2= 'Hola'\n",
+    "if (type(var1)==type(var2)):\n",
+    "    print('son del mismo type')\n",
+    "else:\n",
+    "    print('no son del mismo type')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "son del mismo tipo\n"
+     ]
+    }
+   ],
+   "source": [
+    "vara= 1000\n",
+    "varb= 2000\n",
+    "if (type(vara)== type(varb)):\n",
+    "    print('son del mismo tipo')\n",
+    "elif (type(vara)!=type(varb)):\n",
+    "    print ('no son del mismo tipo')\n",
+    "else:\n",
+    "    print((type (vara,varb)) , 'son de este tipo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c y d tienen diferente tipos de datos\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ERROR\n",
+    "\n",
+    "c= 'juan pedro'\n",
+    "d= 'Catalina de las nieves'\n",
+    "\n",
+    "if (type(c)==(d)):\n",
+    "    print('c y d tienen el mismo tipo de datos')\n",
+    "elif (type(c)!=(d)):\n",
+    "    print('c y d tienen diferente tipos de datos')\n",
+    "else:\n",
+    "    print('ya no entiendo nada')\n",
+    "\n",
+    "print (type (c))\n",
+    "print (type (d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a y b, tienen diferente tipo de datos\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#REVISAR ERRROR \n",
+    "\n",
+    "a= 30\n",
+    "b= 40\n",
+    "\n",
+    "if (type (a) == (b)):\n",
+    "    print('las variables tienen el mismo tipo de datos')\n",
+    "else:\n",
+    "    print('a y b, tienen diferente tipo de datos')\n",
+    "\n",
+    "print (type (a))\n",
+    "print (type (b))\n"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +188,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero 1 es impar\n",
+      "el numero 2 es par\n",
+      "el numero 3 es impar\n",
+      "el numero 4 es par\n",
+      "el numero 5 es impar\n",
+      "el numero 6 es par\n",
+      "el numero 7 es impar\n",
+      "el numero 8 es par\n",
+      "el numero 9 es impar\n",
+      "el numero 10 es par\n",
+      "el numero 11 es impar\n",
+      "el numero 12 es par\n",
+      "el numero 13 es impar\n",
+      "el numero 14 es par\n",
+      "el numero 15 es impar\n",
+      "el numero 16 es par\n",
+      "el numero 17 es impar\n",
+      "el numero 18 es par\n",
+      "el numero 19 es impar\n",
+      "el numero 20 es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    if i%2==0:\n",
+    "        print('el numero',i, 'es par')\n",
+    "    else:\n",
+    "        print('el numero',i, 'es impar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el numero 1 es impar\n",
+      "el numero 2 es par\n",
+      "el numero 3 es impar\n",
+      "el numero 4 es par\n",
+      "el numero 5 es impar\n",
+      "el numero 6 es par\n",
+      "el numero 7 es impar\n",
+      "el numero 8 es par\n",
+      "el numero 9 es impar\n",
+      "el numero 10 es par\n",
+      "el numero 11 es impar\n",
+      "el numero 12 es par\n",
+      "el numero 13 es impar\n",
+      "el numero 14 es par\n",
+      "el numero 15 es impar\n",
+      "el numero 16 es par\n",
+      "el numero 17 es impar\n",
+      "el numero 18 es par\n",
+      "el numero 19 es impar\n",
+      "el numero 20 es par\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (1,21):\n",
+    "    if i%2 ==0:\n",
+    "        print ('el numero' , i , 'es par')\n",
+    "    else:\n",
+    "        print ('el numero' , i, 'es impar')\n"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +276,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "8\n",
+      "27\n",
+      "64\n",
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,6):\n",
+    "    i=i**3\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 es el resultado de elevarlo a la potencia 3\n",
+      "1 es el resultado de elevarlo a la potencia 3\n",
+      "8 es el resultado de elevarlo a la potencia 3\n",
+      "27 es el resultado de elevarlo a la potencia 3\n",
+      "64 es el resultado de elevarlo a la potencia 3\n",
+      "125 es el resultado de elevarlo a la potencia 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,6):\n",
+    "    i= i**3\n",
+    "    print(i , 'es el resultado de elevarlo a la potencia 3')"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +332,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=7\n",
+    "for i in range (0,8):\n",
+    "    pass\n",
+    "print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#REVISAR\n",
+    "numerodeciclos= 5\n",
+    "for i in range (numerodeciclos):\n",
+    "    print(i)"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +384,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial es 20\n",
+      "El factorial es 60\n",
+      "El factorial es 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "if (type(n) == int):\n",
+    "    if (n > 0):\n",
+    "        factorial = n\n",
+    "        while (n > 2):\n",
+    "            n = n - 1\n",
+    "            factorial = factorial * n\n",
+    "            print('El factorial es', factorial)\n",
+    "    else:\n",
+    "        print('La variable es menor que 0')\n",
+    "else:\n",
+    "    print('La variable no es un entero')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EJEMPLO WHILE\n",
+    "\n",
+    "while(n>1):\n",
+    "    multiplicar= n*2   \n",
+    "    n=n-1 \n",
+    "    print(multiplicar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'while' statement on line 5 (4070447106.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    factorial=factorial*x\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'while' statement on line 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=7\n",
+    "if (type(x)== int):\n",
+    "    if (x>0):\n",
+    "        factorial = x\n",
+    "        while (x>2):\n",
+    "        factorial=factorial*x\n",
+    "        x=x-1\n",
+    "        print('el resultado de factorial es' , factorial )\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el factorial de mi variable es: 25\n",
+      "el factorial de mi variable es: 100\n",
+      "el factorial de mi variable es: 300\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "if(type (n) == (int)):\n",
+    "    if (n>0):\n",
+    "        factorial= n\n",
+    "    while(n>2):\n",
+    "        factorial=factorial*n\n",
+    "        n= n-1\n",
+    "        print('el factorial de mi variable es:' , factorial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial de la variable es  20\n",
+      "El factorial de la variable es  60\n",
+      "El factorial de la variable es  120\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=5 \n",
+    "if (type(n) == int):\n",
+    "    if (n>0):\n",
+    "        factorial = n\n",
+    "        while (n>2):\n",
+    "            n = n - 1\n",
+    "            factorial = factorial * n \n",
+    "            print('El factorial de la variable es ' , factorial)\n",
+    "    else:\n",
+    "        print('La variable es menor que 0')\n",
+    "else:\n",
+    "    print('La variable no es un entero')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[70], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m num\u001b[39m=\u001b[39m \u001b[39m5\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[39mwhile\u001b[39;00m (num\u001b[39m>\u001b[39m\u001b[39m0\u001b[39m):\n\u001b[0;32m      3\u001b[0m     \u001b[39mif\u001b[39;00m num \u001b[39m==\u001b[39m \u001b[39mtype\u001b[39m(\u001b[39mint\u001b[39m):\n\u001b[0;32m      4\u001b[0m         \u001b[39mprint\u001b[39m (num)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "num= 5\n",
+    "while (num>0):\n",
+    "    if num == type(int):\n",
+    "        print (num)\n",
+    "num = num-1\n"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +553,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n=5\n",
+    "while(n>5):\n",
+    "    print('ciclo while' , n )   \n",
+    "    for i in range (n,n+1):\n",
+    "        print('cliclo for' , i) \n",
+    "    n+=1\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +577,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in (0,15):\n",
+    "    i= i + 2\n",
+    "    while i < 10:\n",
+    "        print (i)\n",
+    "        i = i + 2"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +609,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "primo= True \n",
+    "while (primo)"
+   ]
   },
   {
    "attachments": {},
@@ -216,7 +690,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while(100,300):\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
@@ -238,7 +715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
